# chat_commands_parcer

./: Cargo.toml  Readme.md  input.txt  output.txt
src/: Makefile  Makefile.mak  grammar.pest  lib.rs  main.rs  output.txt
tests/: grammar_tests.rs
